# opencode-ws

./: AGENTS.md  README.md  analysis-result.json  pyproject.toml
ci/: rule-evolution.yml
error-logs/: sample-errors.json
error-model/cpp/: error.hpp
error-model/go/: error.go
error-model/python/: __init__.py  base_error.py
error-model/rust/: error.rs  mod.rs
error-model/schema/: error.schema.json
error-model/ts/: error.ts  index.ts
rule-evolution/: __init__.py  analyze_errors.py  cli.py  generate_rule.py  rule_db.py
rules/: README.md
rules/candidates/: validation_PY-VAL-001.md
rules/global/: input-validation.md
security/: input-validation.md  secure-coding.md  threat-model.md
skills/cpp-modern-architecture/: SKILL.md
skills/enterprise-error-model/: SKILL.md
skills/enterprise-logging-standard/: SKILL.md
skills/error-structurizer/: enforce.md  prompt.md
skills/evolution-policy/: SKILL.md
skills/frontend-architecture/: SKILL.md
skills/go-best-practices/: SKILL.md
skills/python-quality/: SKILL.md
skills/rust-error-handling/: SKILL.md
